# WHGPP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  WHGPP  cmake_install.cmake  main  main.cpp
lib/: whgmath.cpp  whgmath.hpp
src/: main.cpp
src/core/: game_manager.cpp  game_manager.h
src/entity/: player.cpp  player.h  player.hpp  rotating_balls.cpp  rotating_balls.h
src/math/: vectors.cpp  vectors.h  vectors.hpp
